kuber/src/ingress/ngx-ing-cls.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ngx-ink
  # annotations:
  #   ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: nginx.org/ingress-controller
